More HTML cleanup to allow validation.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             <div data-role="content" id="content_lot">
                 <h3 id="lotlabel"></h3>
                 <div id="number">
-                <div id='waitmessage'>FINDING YOUR LOT</div>
-                <img id='spinner' src="style/spinner.gif" alt="Please Wait"></div>
-                <div id="navbar">
-                  <a href="#page-info"><img id="infobutton" src="style/infoicon.png" alt="Information about lot"></a> 
-                  <a href="#page-map"><img id="mapbutton" src="style/mapicon.png" alt="Map showing lot"></a>
-                  <a href="#page-help"><img id="helpbutton" src="style/helpicon.png" alt="Help"></a>
+                    <div id='waitmessage'>FINDING YOUR LOT</div>
+                    <img id='spinner' src="style/spinner.gif" alt="Please Wait"></div>
+                    <div id="navbar">
+                      <a href="#page-info"><img id="infobutton" src="style/infoicon.png" alt="Information about lot"></a> 
+                      <a href="#page-map"><img id="mapbutton" src="style/mapicon.png" alt="Map showing lot"></a>
+                      <a href="#page-help"><img id="helpbutton" src="style/helpicon.png" alt="Help"></a>
+                    </div>
                 </div>
             </div>
         </div>
