And even more HTML cleanup.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <h3 id="lotlabel"></h3>
                 <div id="number">
                     <div id='waitmessage'>FINDING YOUR LOT</div>
-                    <img id='spinner' src="style/spinner.gif" alt="Please Wait"></div>
-                    <div id="navbar">
-                      <a href="#page-info"><img id="infobutton" src="style/infoicon.png" alt="Information about lot"></a> 
-                      <a href="#page-map"><img id="mapbutton" src="style/mapicon.png" alt="Map showing lot"></a>
-                      <a href="#page-help"><img id="helpbutton" src="style/helpicon.png" alt="Help"></a>
-                    </div>
+                    <img id='spinner' src="style/spinner.gif" alt="Please Wait">
+                </div>
+                <div id="navbar">
+                  <a href="#page-info"><img id="infobutton" src="style/infoicon.png" alt="Information about lot"></a> 
+                  <a href="#page-map"><img id="mapbutton" src="style/mapicon.png" alt="Map showing lot"></a>
+                  <a href="#page-help"><img id="helpbutton" src="style/helpicon.png" alt="Help"></a>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
                 <h2>Source Material</h2>
             
                 <p>The source for the digital map layer used to calculate your lot is a modified version of 
-                <a href="http://www.gov.pe.ca/gis/index.php3?number=1011342&lang=E" target="_BLANK">L.R.I.S., 20050725, Prince Edward Island Townships:
+                <a href="http://www.gov.pe.ca/gis/index.php3?number=1011342&amp;lang=E" target="_BLANK">L.R.I.S., 20050725, Prince Edward Island Townships:
                 Prince Edward Island Finance and Municipal Affairs, Taxation and
                 Property Records, Geomatic Services, Charlottetown, Prince Edward
                 Island, Canada.</a> This map has issues that I have attempted to
@@ -143,7 +143,7 @@
                 <ul>
                     <li>Princetown Royalty was missing. I split the Lot 18 polygon along Rte. 103 from Malpeque Bay, and then along the 
                         Champion Road, across the Baltic River, and along the Roache Road and the Shore Road to the Darnley Basin, 
-                        using the 1880 <a href="http://137.149.200.109:8080/fedora/get/imagined:208400/ilives:jp2Sdef/getRegion?uid=&level=3" target="_BLANK">Meacham's Atlas
+                        using the 1880 <a href="http://137.149.200.109:8080/fedora/get/imagined:208400/ilives:jp2Sdef/getRegion?uid=&amp;level=3" target="_BLANK">Meacham's Atlas
                         Princetown Royalty map</a> as a guide.</li>
                     <li>Lot 50 was mislabelled as Lot 66 and Lot 66 was unlabelled.</li>
                     <li>Georgetown Royalty was mislabelled as Lot 73.</li>
@@ -163,7 +163,7 @@
 
                 <p>Information about each lot and royalty, along with the brief biographical note of the original owner
                 was assembled by Boyde Beck, Curator of History, Exhibits and Editor of The Island Magazine for 
-                <a href="http://www.peimuseum.com/" target="_BLANK">PEI Museum & Heritage Foundation</a>.</p>
+                <a href="http://www.peimuseum.com/" target="_BLANK">PEI Museum &amp; Heritage Foundation</a>.</p>
 
                 <h2>Open Source</h2>
             
