Convert en dashes to HTML entities. Fixes #3.

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                 
                 <ul>
                     <li>The <b>name or number</b> of the lot or royalty.</li>
-                    <li>The <b>county</b> – Prince, Queens or Kings – that the lot is located in.</li>
+                    <li>The <b>county</b> &ndash; Prince, Queens or Kings &ndash; that the lot is located in.</li>
                     <li>The <b>parish</b> that the lot is located in. Each county is subdivided into 4 or 5 parishes.</li>
-                    <li>Holland's <b>rating</b> of the lot – Poor, Average or Excellent.</li>
+                    <li>Holland's <b>rating</b> of the lot &ndash; Poor, Average or Excellent.</li>
                     <li>The name of the original <b>landlord</b> granted the lot by lottery.</li>
                     <li>A brief <b>description</b> of the landlord and their circumstances.</li>
                     <li>The <b>size</b> of the lot, three ways: as estimated by Samuel Holland, as calculated from the 1911 census by Andrew Hill Clark in <i>Three Centuries and the Island</i>, and the modern measure from the contemporary map.</li>
