--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/icons/holland-152.png">
         <link rel="shortcut icon" type="image/png" href="/icons/favicon.ico"/>
         <meta name="mobile-web-app-capable" content="yes">
+        <link rel="manifest" href="/manifest.json">
         <link rel="stylesheet" href="style/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="style/lots.css" />
         <link rel="stylesheet" href="leaflet/leaflet.css" />
