Added icons and <meta name="apple-mobile-web-app-capable" content="yes">

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="description" content="Find your township lot on Prince Edward Island, Canada.">
         <meta name="author" content="Peter Rukavina">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="icon" sizes="192x192" href="/icons/holland-192.png">
         <link rel="apple-touch-icon" href="/icons/holland-60.png">
         <link rel="apple-touch-icon" sizes="76x76" href="/icons/holland-76.png">
