Documentation tweaks & code cleanup.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 
                 <p>This is an app designed and built for people standing on
                 Prince Edward Island soil; if you're not then, alas, we can't help you. But the
-                <a href="http://samuelholland250pei.ca/">Samuel Holland 250</a> folks can.</p>
+                <a href="http://samuelholland250pei.ca/" target="_BLANK">Samuel Holland 250</a> folks can.</p>
 
                 <h2>Who made this?</h2>
             
