Added Try Again button.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <div id="location_notes">
                     <p class="location_notes">Give this app permission to share your location when prompted.</p>
                     <p class="location_notes"><em>The accuracy of your location will depend on your device and your connection to the Internet.</em></p>
+                    <button id="tryagain_button>Try Again</button>
                 </div>
                 <div id="navbar">
                   <a href="#page-info"><img id="infobutton" src="style/infoicon.png" alt="Information about lot"></a> 
