Added a link to http://www.islandimagined.ca/fedora/repository/imagined%3A209165

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 Prince Edward Island Finance and Municipal Affairs, Taxation and
                 Property Records, Geomatic Services, Charlottetown, Prince Edward
                 Island, Canada.</a> This map has issues that I have attempted to
-                correct:</p>
+                correct, in part using <a href="http://www.islandimagined.ca/fedora/repository/imagined%3A209165" target="_BLANK>">this 1852 redrawing of the map</a>:</p>
             
                 <ul>
                     <li>Princetown Royalty was missing. I split the Lot 18 polygon along Rte. 103 from Malpeque Bay, and then along the 
