Remove dead links.

--- a/index.html
+++ b/index.html
@@ -109,19 +109,15 @@
                 help you plan your trip here</a>.</p>
 
                 <p>This is an app designed and built for people standing on
-                Prince Edward Island soil; if you're not then, alas, we can't help you. But the
-                <a href="http://samuelholland250pei.ca/" target="_BLANK">Samuel Holland 250</a> folks can.</p>
+                Prince Edward Island soil; if you're not then, alas, we can't help you.</p>
 
                 <h2>Who made this?</h2>
 
-                <p>This is a my project, and I'm Peter Rukavina,
-                <a href="http://hacker.vre.upei.ca/" target="_BLANK">Hacker in
-                Residence, University of Prince Edward Island, Robertson
-                Library</a>.</p>
+                <p>This is a my project, and I'm Peter Rukavina.</p>
 
                 <h2>How can I contact you?</h2>
 
-                <p>You can email me at <a href="mailto:whatsmylot@reinvented.net">whatsmylot@reinvented.net</a> with
+                <p>You can email me at <a href="mailto:peter@rukavina.net">peter@rukavina.net</a> with
                 questions, concerns, suggestions, complaints. Remember, I'm just a guy who made an app in his
                 spare time.</p>
 
